# haskell-boilerplate-transparent-gtk-app

./: README.org  haskell-boilerplate-transparent-gtk-app.cabal  transparent.glade  transparentHS.cabal
src/: Lib.hs
