name:                haskell-boilerplate-transparent-gtk-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/phuhl/haskell-boilerplate-transparent-gtk-app#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Uhl
maintainer:          example@example.com
copyright:           2017 Philipp Uhl
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , gtk3             >= 0.14.2
                     , transformers
                     , cairo
                     , haskell-gi
                     , haskell-gi-base
                     , gi-cairo
                     , gi-glib
                     , gi-gdk
                     , gi-gdkpixbuf
                     , gi-gtk
                     , time

  default-language:    Haskell2010

executable transparentHS
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-boilerplate-transparent-gtk-app
  default-language:    Haskell2010

test-suite transparentHS-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-boilerplate-transparent-gtk-app
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/phuhl/haskell-boilerplate-transparent-gtk-app
